new changes to layout + impressum

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,10 @@
             </a>
           </li>
           {% endif %}
+          <li>
+
+            <a href="{{site.baseurl}}/impressum">Impressum</a>
+          </li>
         </ul>
       </div>
 
