--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,6 @@
 * Site header
 */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: 56px;
 
@@ -206,8 +205,9 @@
 }
 
 .post-link {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
   margin-bottom: 8px;
 }
 
@@ -279,7 +279,7 @@
 }
 
 .post-title {
-  font-size: 42px;
+  font-size: 35px;
   letter-spacing: -1px;
   line-height: 1;
 
