--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -271,6 +271,13 @@
   font-size: 15px;
   margin: 0px 0px 5px 0px;
 }
+
+.found-on {
+  font-size: 10px;
+  float: left;
+  color: #5E5E5E;
+  overflow: hidden;
+}
 /**
 * Posts
 */
