--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -228,6 +228,7 @@
   height: 70px;
   overflow: hidden;
   margin-right: 20px;
+  background: #F2F2F2;
   img {
     position: absolute;
     left: 50%;
