--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -179,16 +179,6 @@
   font-size: 20px;
 }
 
-.post-list {
-  margin-left: 0;
-  list-style: none;
-
-  > li {
-    height: 70px;
-    margin-bottom: 10px;
-  }
-}
-
 .post-meta {
   font-size: $small-font-size;
   color: $grey-color;
@@ -214,9 +204,34 @@
 
 .posts {
   margin-right: 5%;
+  list-style: none;
+
+  li {
+    display: list-item;
+  }
 }
 
-.post-link {
+.post-item {
+  position: relative;
+  min-height: 70px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.post-item-text {
+  -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      box-flex: 1;
+      -webkit-flex: 1;
+      -moz-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+    position: relative;
+    float: left;
+
+}
+
+.post-item-title {
   font-size: 18px;
   line-height: 1;
   font-style: normal;
@@ -243,7 +258,7 @@
   }
 }
 
-.post-thumbnail {
+.post-item-thumbnail {
   float:left;
   position: relative;
   width: 70px;
@@ -303,7 +318,6 @@
 
 .picture-list {
   float: left;
-  display: block;
   margin-top: 20px;
   img {
     margin-bottom: 10px;
